feat: Remove lowered state, increase size of kitchen blocks